syntax = "proto3";

package org.hse.nnbuilder.services;

import "enums.proto";

service UserAccountService {
  rpc getName (GetNameRequest) returns (GetNameResponse);
  rpc getEmail (GetEmailRequest) returns (GetEmailResponse);
  rpc changeName (ChangeNameRequest) returns (ChangeNameResponse);
  rpc changePassword (ChangePasswordRequest) returns (ChangePasswordResponse);
  rpc getProjects (GetProjectsRequest) returns (GetProjectsResponse);
}

message GetNameRequest {}

message GetNameResponse {
  string name = 1;
}

message GetEmailRequest {}

message GetEmailResponse {
  string email = 1;
}

message ChangeNameRequest {
  string newName = 1;
}

message ChangeNameResponse {}

message ChangePasswordRequest {
  string oldPassword = 1;
  string newPassword = 2;
}

message ChangePasswordResponse {
  string exception = 1;
}

message GetProjectsRequest {}

message GetProjectsResponse {
  repeated ProjectInfo project = 1;
}

message ProjectInfo {
  int64 id = 1;
  string name = 2;
  int32 versions = 3;
  NetworkType nnType = 4;
  ActionType actionType = 5;
}